# lec_massif

./: README.md  pyproject.toml
.github/workflows/: check.yml
lab/lab1/: README.md  ex1.ipynb  ex2.ipynb  ex3.ipynb
lab/lab1/spe10/: spe10.py
lab/lab1/spe10/perm/: small_0.csv  small_0.csv~
lab/lab2/: README.md  ex1.ipynb  ex2.ipynb  ex3.ipynb  ex4.ipynb  ex5.ipynb
lab/lab3/: README.md  ex1.ipynb  ex1_text.ipynb  ex2.ipynb  ex2_text.ipynb  ex3.ipynb  ex3_text.ipynb
lab/lab4/: README.md  ex1.ipynb  ex2.ipynb
lab5/: ex1.ipynb  ex2.ipynb
tests/: test_tutorials.py
